# swallow-me

./: .gitignore  CLAUDE_CODE_HANDOFF.md  README.md  package-lock.json  package.json
program/: Anchor.toml  Cargo.toml
program/programs/swallow-me/: Cargo.toml
program/programs/swallow-me/src/: errors.rs  lib.rs  state.rs
program/programs/swallow-me/src/instructions/: mod.rs
server/: .env.example  Dockerfile  package.json
server/src/: index.ts
server/src/config/: gameConfig.ts
server/src/game/: Arena.ts  BotAI.ts  Food.ts  GameLoop.ts  Physics.ts  Snake.ts  SpatialGrid.ts
server/src/rooms/: SnakeRoom.ts  SnakeState.ts
web/: .env.example  next.config.js  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/api/game/enter/: route.ts
web/app/api/game/settle/: route.ts
web/app/api/leaderboard/: route.ts
web/app/api/log-error/: route.ts
web/app/api/sync-wallet/: route.ts
web/app/api/user/register/: route.ts
web/app/api/user/set-username/: route.ts
web/app/og-image.png/: route.tsx
web/app/play/: page.tsx
web/components/: SnakeGame.tsx
web/lib/canvas/: GameRenderer.ts  joystick.ts  steering.ts
web/lib/canvas/__tests__/: steering.test.ts
web/lib/colyseus/: client.ts
web/lib/phaser/: SnakeScene.ts
web/lib/stubs/: solana-program-memo 2.js
web/lib/supabase/: client.ts
web/lib/voice/: MockVoiceChat.ts  VoiceChat.ts  useVoiceChat.ts
