[package]
name = "swallow-me"
version = "0.1.0"
description = "Swallow Me - Real-money snake PvP game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swallow_me"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
